new proj/src/objects/GE_HQ_GIB_Mod_Req__c.object
<CustomObject>
    <fields>
        <fullName>GE_ES_Equipment_Type_Intake__c</fullName>
        <label>Equipment Type-Intake</label>
        <picklist>
            <picklistValues>
                <fullName>(SGT-400)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centaur 40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centaur 50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coberra 2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coberra 6000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compressor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cyclone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diesel Gen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DR60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DR61</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DR61P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DR63</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DR990</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LM1600 </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LM2000PS, LM2000PJ </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LM2500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LM2500+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LM2500+PK, LM2500+G4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LM2500+ RC, LM2500+ RD </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LM2500PE, LM2500PJ, LM2500PH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LM2500PF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LM500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LM6000PC, LM6000PD, LM6000PF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LMS100, LMS100PA, LMS100PB </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Locomotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC6000PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercury</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Equipment_Type__c</fullName>
        <label>Equipment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Baghouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boiler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cartridge Collector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cyclone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dampers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dryer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economizer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heat Exchanger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hopper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hopper/Silo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTAKE SYSTEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiclone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Precipitator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Railroad Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scrubber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Selective Catalytic Reduction (SCR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soot Blowing System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacuum System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Exciter_Type__c</fullName>
        <label>Exciter Type</label>
        <picklist>
            <picklistValues>
                <fullName>ABB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rotating Alterrex Compact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rotating Alterrex Separate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rotating Althyrex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alstom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rotating Brushless</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Static BUSFED Potential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rotating DC Direct Driven</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rotating DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rotating Alterrex EX2100 AVR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rotating Brushless EX2100 AVR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Static EX2100 Compound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rotating DC EX2100 AVR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Static EX2100 Mutli-Bridge Potential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Static EX2100 Potential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Static EX2100 Partial Compound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Static SCT-PPT EX2100 AVR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rotating Alterrex EX2000 AVR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rotating Brushless EX2000 AVR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Static EX2000 Compound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rotating DC EX2000 AVR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Static EX2000 Multi-Bridge Potential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Static EX2000 Potential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Static EX2000 Partial Compound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Static SCT-PPT EX2000 AVR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rotating DC Gear Driven</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Static Generrex Compound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Static Generrex Potential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rotating DC MOT-GEN Potential</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Factored_Fired_Hours__c</fullName>
        <label>Factored Fired Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Family_Code__c</fullName>
        <label>Family Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Frequency__c</fullName>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_GE_Installed_Intake_Brand__c</fullName>
        <label>GE Installed Intake Brand</label>
        <picklist>
            <picklistValues>
                <fullName>AltairAquila</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AltairIndra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AltairLibrapulse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AltairNeptune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AltairSupernova</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AltairSystem2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AltairSystem3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AltairVega</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Altair Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_GE_Related_S_N__c</fullName>
        <label>GE Related S/N</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_GE_S_N__c</fullName>
        <externalId>true</externalId>
        <label>GE S/N</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_GIB_Equipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GIB S/N</label>
        <referenceTo>GE_HQ_GIB_Mod_Req__c</referenceTo>
        <relationshipName>Installed_Base1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_GIB_GE_S_N__c</fullName>
        <formula>GE_ES_GIB_Equipment__r.GE_ES_GE_S_N__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GE S/N</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_GT_Supplier__c</fullName>
        <label>GT Supplier</label>
        <picklist>
            <picklistValues>
                <fullName>GE - AEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE - EP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE - EPE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE - O&amp;G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siemens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alstom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MHI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IHI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dresser Rand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kawasaki</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rolls-Royce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pratt &amp; Witney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centrax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turbomach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compressor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Horns_Compartment__c</fullName>
        <label># Horns/Compartment</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Horns_Hopper__c</fullName>
        <label># Horns/Hopper</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_In_Service_Date__c</fullName>
        <label>In Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Industry__c</fullName>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Electric Utility/IPP/NUG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exploration/Extraction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Petrochemical/Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil/Gas Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marine/Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goverment/Public Authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other(Food/Healthcare/Universities/etc)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Inlet_Treatment__c</fullName>
        <label>Inlet Treatment</label>
        <picklist>
            <picklistValues>
                <fullName>Bleed Heat A/I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chiller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fogger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other A/I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Insect_Screen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insect Screen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_ES_Install_Director__c</fullName>
        <label>Install Director</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Installed_Intake_Supplier__c</fullName>
        <label>Installed Intake Supplier</label>
        <picklist>
            <picklistValues>
                <fullName>AAF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AEP-BTP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Braden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Camfil Farr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clarcor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donaldson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freudenberg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G+H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parmatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peerless</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premaberg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Installed_System_Type__c</fullName>
        <label>Installed System Type</label>
        <picklist>
            <picklistValues>
                <fullName>Pulse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Static</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_LSB_Length__c</fullName>
        <label>LSB Length</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Machinery_Management__c</fullName>
        <label>Machinery Management</label>
        <picklist>
            <picklistValues>
                <fullName>COMPETITOR SYSTEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DM2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DM2000, MCM2000 &amp; BENTLY PERFORMANCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DM2000 &amp; MCM2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OBSOLETE BENTLY SYSTEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYSTEM 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYSTEM 1, DECISION SUPPORT &amp; BENTLY PERFORMANCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYSTEM 1 &amp; DECISION SUPPORT</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Manufacture_Location__c</fullName>
        <label>Manufacture Location</label>
        <picklist>
            <picklistValues>
                <fullName>GE Design - Alstom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABB/Stal Laval-Non-GE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Design - Ansaldo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Aero Energy Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allison-Non-GE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AEG-Kanis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alstom-Non-GE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Almelo, Netherlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ansaldo-Non-GE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC Compressor - Oshkosh WI, USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aviad-Non-GE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China Nat&apos;l</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Bangor, Me</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Design - Brush</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Design - BHEL (India)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baldwin Locomotive Works</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baldwin-Lima-Hamilton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baldor/Reliance-Non-GE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brush Electrical Machines Ltd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bristol-Siddley-Non-GE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Design - Canadian GE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Matane, Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEM-Non-GE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conmec - Bethlehem PA, USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centrax-Non-GE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creole-Non-GE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caterpillar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooper-Rolls-Non-GE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creusot-Non-GE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Curtis-Non-GE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Metric_Measurements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Metric Measurements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_ES_Model__c</fullName>
        <label>Model #</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Nameplate_SN__c</fullName>
        <label>Nameplate SN</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Next_Outage_Date__c</fullName>
        <label>Next Outage Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Next_Outage_Type__c</fullName>
        <label>Next Outage Type</label>
        <picklist>
            <picklistValues>
                <fullName>Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combustion Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hot Gas Path  Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Inspection</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Number__c</fullName>
        <label>Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Number_of_Compartments__c</fullName>
        <label># of Compartments</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_OEM_Code_Current__c</fullName>
        <label>OEM Code - Current</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Operating_Temperature_Avg_F__c</fullName>
        <label>Operating Temperature - Avg F</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Operating_Temperature_Hi_F__c</fullName>
        <label>Operating Temperature - Hi F</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Operating_Temperature_Lo_F__c</fullName>
        <label>Operating Temperature - Lo F</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Original_Intake_Supplier__c</fullName>
        <label>Original Intake Supplier</label>
        <picklist>
            <picklistValues>
                <fullName>AAF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AEP-BTP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Braden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Camfil Farr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clarcor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donaldson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freudenberg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G+H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parmatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peerless</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premaberg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Originally_Supplied_Filter_Type__c</fullName>
        <label>Originally Supplied Filter Type</label>
        <picklist>
            <picklistValues>
                <fullName>Pulse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Static</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Outage_Date__c</fullName>
        <label>Outage Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_PPM__c</fullName>
        <label>PPM</label>
        <picklist>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unabated (No NOx Control)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>33</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>42</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>58</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>65</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_P_L__c</fullName>
        <label>P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>Environmental Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil &amp; Gas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Parts__c</fullName>
        <label>Parts</label>
        <picklist>
            <picklistValues>
                <fullName>High Penetration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium Penetration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Penetration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Power_Factor__c</fullName>
        <label>Power Factor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Power_Train_Config__c</fullName>
        <label>Power Train Config</label>
        <picklist>
            <picklistValues>
                <fullName>105 Multi Shaft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>106 Multi Shaft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>106 Single Shaft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>107 Multi Shaft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>107 Single Shaft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>109 Multi Shaft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>109 Single Shaft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>205 Multi Shaft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>206 Multi Shaft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>207 Multi Shaft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>209 Multi Shaft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>305 Multi Shaft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>306 Multi Shaft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>307 Multi Shaft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>309 Multi Shaft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>405 Multi Shaft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>406 Multi Shaft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>407 Multi Shaft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>409 Multi Shaft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>605 Multi Shaft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>607 Multi Shaft</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>